--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,12 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 {
     border: 1px;
     padding: 5px;
+    text-align: center;
+    color: azure;
+    font-size: 15px;
+    font-style: italic;
+    text-decoration: none;
 }
-
 
 
 
