--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -29,3 +29,54 @@ main{
         }
     }
 }
+
+.salmon {
+    text-align: center;
+    ul{
+        a{color: azure;
+            font-size: 30px;
+            font-style: italic;
+            text-decoration: none;
+            img{
+                p{color: aliceblue;
+                    font-size: 20px;
+
+                }
+            }
+        }
+    }
+}
+
+.pulpo {
+    text-align: center;
+    ul{
+        a{color: azure;
+            font-size: 30px;
+            font-style: italic;
+            text-decoration: none;
+            img{
+                p{color: aliceblue;
+                    font-size: 20px;
+
+                }
+            }
+        }
+    }
+}
+
+.cangrejo {
+    text-align: center;
+    ul{
+        a{color: azure;
+            font-size: 30px;
+            font-style: italic;
+            text-decoration: none;
+            img{
+                p{color: aliceblue;
+                    font-size: 20px;
+
+                }
+            }
+        }
+    }
+}
