--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,3 +4,7 @@
 @import "./components/main";
 @import "./components/footer";
 @import "./base/mediaquery";
+@import "./components/nosotros";
+@import "./components/enciclopedia";
+@import "./components/contacto";
+@import "./components/galeria";
