--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -1,13 +1,29 @@
-*{margin: 0;
-    padding: 0;}
-    
-    
-    h2{color: rgb(243, 245, 241);
-        text-align: center;
-        margin: 2px 2px 2px 2px;
-        background-image: url(../img/logo1.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed}
-        h2{font-style: italic;}
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+h2 {
+    color: rgb(243, 245, 241);
+    text-align: center;
+    margin: 2px 2px 2px 2px;
+    background-image: url(../img/logo1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed
+}
+
+h2 {
+    font-style: italic;
+}
+
+h1 {
+    color: rgb(2, 12, 12);
+    background-image: url(../img/logo1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-style: italic; }
