--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@
 
 
 h2 {
-  color: rgb(243, 245, 241);
+  color: rgb(0, 0, 0);
   text-align: center;
   margin: 2px 2px 2px 2px;
   background-image: url(../img/logo1.jpg);
@@ -15,13 +15,15 @@ h2 {
   background-attachment: fixed
 }
 
+.logo{font-size: 40px;}
+
 h2 {
   font-style: italic;
 }
 
 /*----HEADER----*/
 header {
-  background-color: rgb(48, 46, 45);
+  background-color: rgb(255, 255, 255);
   background-image: url(../img/logo1.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -67,13 +69,13 @@ header nav ul li {
 }
 
 header nav ul li a {
-  color: beige;
+  color: rgb(0, 0, 0);
   font-style: italic;
 }
 
 /*----MAIN-----*/
 main section {
-  background-image: url(../img/logo1.jpg);
+  background-color: rgb(245, 245, 245);
   width: 100%;
   height: 100%;
   background-position: center;
@@ -92,14 +94,14 @@ main div section img {
 }
 
 .langosta ul a {
-  color: azure;
+  color: rgb(0, 0, 0);
   font-size: 30px;
   font-style: italic;
   text-decoration: none;
 }
 
 main div section.langosta p {
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
@@ -109,14 +111,14 @@ main div section.langosta p {
 }
 
 .salmon ul a {
-  color: azure;
+  color: rgb(0, 0, 0);
   font-size: 30px;
   font-style: italic;
   text-decoration: none;
 }
 
 main div section.salmon p {
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
@@ -125,14 +127,14 @@ main div section.salmon p {
 }
 
 .pulpo ul a {
-  color: azure;
+  color: rgb(0, 0, 0);
   font-size: 30px;
   font-style: italic;
   text-decoration: none;
 }
 
 main div section.pulpo p {
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   font-size: 20 px;
 }
 
@@ -141,14 +143,14 @@ main div section.pulpo p {
 }
 
 .cangrejo ul a {
-  color: azure;
+  color: rgb(0, 0, 0);
   font-size: 30px;
   font-style: italic;
   text-decoration: none;
 }
 
 main div section.cangrejo {
-  color: aliceblue;
+  color: rgb(0, 0, 1);
   font-size: 20px;
 }
 
@@ -187,7 +189,7 @@ footer {
   border: 1px;
   padding: 5px;
   text-align: center;
-  color: azure;
+  color: rgb(0, 0, 0);
   font-size: 15px;
   font-style: italic;
   text-decoration: none;
@@ -207,7 +209,7 @@ h3 {  color:black;
     background-size: cover;
     background-attachment: fixed}
     
-    .hh{color:azure;
+    .hh{color:rgb(0, 0, 0);
       text-align: center;
       background-position: center;
       background-repeat: no-repeat;
@@ -224,3 +226,9 @@ h3 {  color:black;
       background-attachment: fixed;
       font-size: 23px;
       font-style: italic;}
+
+      .col-md-6float-md-endmb-3ms-md-3{
+        width: 320px;
+        height: 350px;
+      }
+      
