--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,7 +15,6 @@ h2 {
   background-attachment: fixed
 }
 
-.logo{font-size: 40px;}
 
 h2 {
   font-style: italic;
@@ -43,8 +42,8 @@ header a {
 }
 
 header a img {
-  width: 320px;
-  height: 350px;
+  width: 200px;
+  height: 250px;
 }
 
 header nav ul {
@@ -227,8 +226,16 @@ h3 {  color:black;
       font-size: 23px;
       font-style: italic;}
 
-      .col-md-6float-md-endmb-3ms-md-3{
-        width: 320px;
-        height: 350px;
+
+      main div img {
+        width: 400px;
+        height: 250px;
+        background-position: center;
+        text-align: center;
       }
-      
+
+@media screen and (max-width: 1020px) and (min-width:750px){
+  .tortuga{
+  
+  }
+}
